--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,6 @@ services:
     ports:
       - "80:8501"
     volumes:
-      - ./app:/app
+      - .:/app
     working_dir: /app
     command: sh -c "pip install --upgrade pip && pip install -r requirements.txt && streamlit run app.py"
