--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,4 @@ services:
     volumes:
       - .:/app
     working_dir: /app
-    command: sh -c "pip install --upgrade pip && pip install -r requirements.txt && streamlit run app.py"
+    command: sh -c "apt update && apt install libgomp1 && pip install --upgrade pip && pip install -r requirements.txt && streamlit run app.py"
